--- a/tourist-service/pom.xml
+++ b/tourist-service/pom.xml
@@ -22,7 +22,7 @@
     <packaging>jar</packaging>
     <artifactId>tourist-service</artifactId>
     <description>
-        包括实体,仓库,和服务
+        包括实体,JPA仓库,和服务
     </description>
 
 </project>
