--- a/tourist-supplier/pom.xml
+++ b/tourist-supplier/pom.xml
@@ -28,7 +28,7 @@
         <dependency>
             <groupId>com.huotu.product-tourist</groupId>
             <artifactId>tourist-service</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
 
     </dependencies>
