分销商平台服务添加

--- a/tourist-service/pom.xml
+++ b/tourist-service/pom.xml
@@ -83,6 +83,11 @@
             <artifactId>spring</artifactId>
             <version>${jiangcai.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.2</version>
+        </dependency>
     </dependencies>
 
     <build>
