--- a/tourist-web/pom.xml
+++ b/tourist-web/pom.xml
@@ -43,6 +43,12 @@
             <version>${javaee.version}</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.3.1</version>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
 
     <build>
