--- a/tourist-web/pom.xml
+++ b/tourist-web/pom.xml
@@ -5,7 +5,7 @@
   ~
   ~ (c) Copyright Hangzhou Hot Technology Co., Ltd.
   ~ Floor 4,Block B,Wisdom E Valley,Qianmo Road,Binjiang District
-  ~ 2013-2016. All rights reserved.
+  ~ 2013-2017. All rights reserved.
   -->
 
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
@@ -52,6 +52,7 @@
     </dependencies>
 
     <build>
+        <finalName>ROOT</finalName>
         <testResources>
             <testResource>
                 <directory>src/test/resources</directory>
